--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>org.mi.free</groupId>
     <artifactId>smart-framework</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
     <!--maven依赖，具有传递性，就是说别人依赖了smart-framework，也就依赖了以下依赖-->
     <dependencies>
         <dependency>
